# elastodynamics

./: CMakeLists.txt  FE.cpp  FE.h  FE_test.cpp  README.md  automate_it.sh  main.cpp
